styles.css
/* ... */
.header__logo img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

/*////////// 
                                                    navbar
                                                 //////////*/

/* this provides a background place holder after the hamburger is clicked and the navbar moves */
.nav-wrap {
    width: 100%;
    height: 37px;
    background: var(--clr-nav);
    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.616);
    /* position:sticky;
     z-index:999;
     top:0; */
}

/* this is the navbar - it sits outside of the inner grid but inside the main content grid item. it is only sticky for mobile size */
.sticky-nav {
    display: flex;
    width: 100%;
    justify-content: center;
    background: var(--clr-nav);
    /* position: sticky;
    top: 0; */
    z-index: 999;
    padding: 0.3em;
    /* box-shadow: 0 1px 5px rgba(0, 0, 0, 0.616); */
    /* transition: 0.5s; */
}

#hamburger {
    display: none;
}

/* this moves the theme icon to the left side of the navbar on desktop */
.theme {
    position: absolute;
    z-index: 999;
    left: 50px;
}

#close {
    display:none;
}

.navbar__ul {
    display: flex;
    width: 50%;
    max-width: 700px;
    justify-content: space-between;
    align-items: center;
    margin: 0.25em;
    padding: 0;
    list-style-type: none;
}

/* these are the IDs for the theme/mode icon */
#modeToggle {
    color: var(--clr-links);
    cursor: pointer;
    /* transition: 1s; */
}

.navbar__ul a {
    color: var(--clr-links);
    transition: 0.5s;
}

.navbar__ul a:hover {
    color: var(--clr-links-hover);
}

/* ///////////
                                                   SIDEBAR
                                                ///////////*/

/* GRID AREA - S --this is the grid area for the sidebar */
.main-content__sidebar {
    grid-area: s;

    /* background:var(--clr-dark); */
    /* padding:0 1em 1em 1em; */
    /*   display:flex;
    flex-direction:column; */
}

.sidebar__h3 {
    font-weight: 400;
    text-align: center;
    /* padding: 1em 0 0 0; */
    font-size: 2rem;
}

/* this wraps the sidebar title and items */
.sidebar-wrap {
    position: sticky;
    top: 1em;
    background: var(--clr-content-bg);
    padding: 0.5em;
    border-radius: 5px;
}

/* this wraps just the sidebar items */
.sidebar__item-wrap {
    /* background:rgba(33,33,33,.5); */
    display: flex;
    flex-direction: column;
}

.sidebar__item {
    height:200px;
    width: 100%;
    background: none;
    margin-top: 1em;
    display:flex;
    flex-direction:column;
    border:solid 3px var(--clr-sidebar-info);
}

.sidebar__item-info {
    width:100%;
    height:75px;
    background:var(--clr-sidebar-info);
    display:flex;
    flex-direction:column;
    justify-content: space-evenly;
    padding:.5em;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.274);
    color:var(--clr-text);
    
}

.item-info__p {
    line-height:initial;
    margin:.25em 0 0 0;
    font-size:1.2rem;
    
}

.item-info__h4 {
    font-size:1.6rem;
    color:var(--clr-highlight);
}

/* /////////////
                                                MAIN CONTENT
                                              ////////////// */

/* GRID AREA - A -- this is the container for the main article */
.newest-post {
    grid-area: a;
    background: var(--clr-content-bg);
    padding: 1em;
    border-radius: 5px;
}

/* this is the flex container that holds the main article and its content - centers the video and title */
.newest-post__content-wrap {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.newest-post__p {
    margin: 0;
}

/* this wraps the newest post title + date */
.title-wrap {
    text-align: start;
}

.newest-post__h2 {
    font-size: 3.5rem;
    margin: 0 0 0.5em 0;
}

.newest-post__h3 {
    color: var(--clr-primary);
}

.newest-post iframe {
    /* margin: 1em auto; */
    margin: 1em 0 1em 0;
    max-width: 560px;
    width: 100%;
}

.newest-post__content p {
    max-width: 85ch;
}

/* when the "read more" button is clicked, the .show class is toggled on or off */
.newest-post--hidden {
    display: none;
}

.newest-post--hidden.show {
    display: block;
}

.newest-post--hidden.show p {
    animation: fadeIn 3s;
}

/* this is the read more button that expands the newest post if clicked */
#newest-post__button {
    cursor: pointer;
    border: solid var(--clr-accent) 2px;
    text-align: center;
    padding: 0.5em;
    border-radius: 999px;
    text-decoration: none;
    color: var(--clr-accent);
    transition: 0.25s;
    display: flex;
    justify-content: center;
    /* width: 100%; */
    margin: 1em 0 1em 0;
}

#newest-post__button:hover {
    color: var(--clr-links);
    border: solid var(--clr-primary) 2px;
    background: var(--clr-primary);
}

/* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
#backToTop {
    cursor: pointer;
    border: solid var(--clr-accent) 2px;
    text-align: center;
    padding: 0.5em;
    border-radius: 999px;
    text-decoration: none;
    color: var(--clr-accent);
    transition: 0.25s;
    display: none;
    justify-content: center;
    /* width: 100%; */
    margin: 1em 0 1em 0;
}

#backToTop:hover {
    color: var(--clr-links);
    border: solid var(--clr-primary) 2px;
    background: var(--clr-primary);
}

/* //////////
                                                FOOTER
                                             /////////// */

.grid-container__footer {
    align-items: center;
    justify-content: center;
    display: flex;
}

.footer__content {
    display: flex;
    align-items: center;
    justify-content: space-around;
    height: 100%;
    width: 225px;
}

i {
    color: var(--clr-links);
    /* transform: scale(200%); */
    transition: 0.25s;
}

i:hover {
    /* transform: scale(230%); */
    color: var(--clr-highlight);
}
/* ... */

